--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Website Repo</title>
+    <link rel="stylesheet" href="styles/blogs.css">
 </head>
 <body>
-    
+    <div>
+<h1>My Simple Website repo</h1>
+ <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum obcaecati molestias recusandae, sed voluptatem dolore omnis ut aliquam error vero, quibusdam maiores incidunt quam maxime ipsa similique! Earum, mollitia illum?</p>
+
+    </div>
 </body>
 </html>
