added the blogs

--- a/index.html
+++ b/index.html
@@ -12,5 +12,15 @@
  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum obcaecati molestias recusandae, sed voluptatem dolore omnis ut aliquam error vero, quibusdam maiores incidunt quam maxime ipsa similique! Earum, mollitia illum?</p>
 
     </div>
+    <div>
+<h1>My First Blog</h1>
+ <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum obcaecati molestias recusandae, sed voluptatem dolore omnis ut aliquam error vero, quibusdam maiores incidunt quam maxime ipsa similique! Earum, mollitia illum?</p>
+
+    </div>
+    <div>
+<h1>My Second Blog</h1>
+ <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum obcaecati molestias recusandae, sed voluptatem dolore omnis ut aliquam error vero, quibusdam maiores incidunt quam maxime ipsa similique! Earum, mollitia illum?</p>
+
+    </div>
 </body>
 </html>
