--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum obcaecati molestias recusandae, sed voluptatem dolore omnis ut aliquam error vero, quibusdam maiores incidunt quam maxime ipsa similique! Earum, mollitia illum?</p>
 
     </div>
+    <h2>My University Jersey</h2>
+<img src="photo/WhatsApp Image 2024-12-14 at 22.41.45_096378a8.jpg" alt="EEE">
+
 </body>
 </html>
